fixing video responsive

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         <section>
             <div class="video-container">
                 <video autoplay muted loop id="background-video">
-                    <source media="max-width: 791px" src="assets/background-world-tech.mp4" type="video/mp4">
-                    <source media="min-width: 790px" src="assets/background-hightech.mp4" type="video/mp4">
+                    <source media="(max-width: 790px)" src="assets/background-world-tech.mp4" type="video/mp4">
+                    <source media="(min-width: 791px)" src="assets/background-hightech.mp4" type="video/mp4">
                     Seu navegador não suporta vídeos HTML5.
                 </video>
                 <p class="video-message">Página em desenvolvimento</p>
