fixing function nav

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
         <nav>
             <span class="logotype"><a href="index.html">groenendael</a></span>
             <ul class="menu">
-                <li><a href="#portfolio-container">projetos</a></li>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="index.html#portfolio-container">projetos</a></li>
+                <li><a href="about.html">Sobre</a></li>
                 <li><a href="#">Contatos</a></li>
                 <div class="button-container">
                     <button class="button-theme" id="theme-toggle">🌙</button>
@@ -39,7 +39,7 @@
                     </div>
                 </header>
                 <div class="hero-image">
-                    <figure><img src="assets/wolf-profile.jpg" alt=""></figure>
+                    <picture><img src="assets/wolf-profile.jpg" alt=""></picture>
                 </div>
             </section>
         </div>
