first part of the second version

--- a/index.html
+++ b/index.html
@@ -16,38 +16,45 @@
         <nav>
             <span class="logotype"><a href="index.html">groenendael</a></span>
             <ul class="menu">
-                <li><a href="#portfolio-container">projetos</a></li>
-                <li><a href="about.html">Sobre</a></li>
-                <li><a href="#">Contatos</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a href="https://github.com/danielssaugusto" target="_blank">GitHub</a></li>
                 <div class="button-container">
                     <button class="button-theme" id="theme-toggle">🌙</button>
-                    <a href="https://github.com/danielssaugusto" class="github" target="_blank">GitHub</a>
                 </div>
             </ul>
+
         </nav>
+
+        <section class="header-main">
+            <header class="nav-profile">
+                <div class="nav-profile-left">
+                    <h1>hi! i'm</h1>
+                    <span class="nav-profile-subtitle">software engineer</span>
+                    <hr>
+                    <p class="nav-subtitle">Estudante de Engenharia de Software transferido do curso de Ciência da Computação, tem sido uma jornada de ampliação de conhecimento.</p>
+                </div>
+                <picture class="nav-picture">
+                    <img src="assets/wolf-profile.jpg" alt="wolf photo">
+                </picture>
+            </header>
+            
+            <div class="hero-container">
+                <ul class="social-icons">
+                    <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
+                    <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
+                </ul>
+                <div class="button-hero">
+                    <button type="button" class="button">know more</button>
+                </div>
+                <p class="quote">"Lembre-se de quando você sonhava chegar aonde está hoje."</p>
+            </div>
+        </section>
     </header>
 
     <main>
         <div class="main-hero">
-            <section class="hero-container">
-                <header class="hero-profile">
-                    <span class="hero-profile-subtitle blue">software engineer</span>
-                    <h1>daniel augusto</h1>
-                    <hr>
-                    <p class="hero-subtitle">Estudante de Engenharia de Software transferido do curso de Ciência da Computação, tem sido uma jornada de ampliação de conhecimento.</p>
-                    <p class="quote">"Lembre-se de quando você sonhava chegar aonde está hoje."</p>
-                    <div class="button-hero">
-                        <!-- <button type="button" class="button">start the journey</button> -->
-                    </div>
-                </header>
-                <div class="hero-image">
-                    <picture>
-                        <source media="(max-width: 790px)" srcset="assets/wolf-profile-768px.png">
-                        <source media="(min-width: 791px)" srcset="assets/wolf-profile.jpg">
-                        <img src="assets/wolf-profile.jpg" alt="">
-                    </picture>
-                </div>
-            </section>
         </div>
 
         <section class="portfolio-container" id="portfolio-container">
