adding about section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="hero-container">
             <ul class="social-icons">
                 <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
-                <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
+                <li><a href="https://github.com/danielssaugusto" target="_blank"><i class="devicon-github-original"></i></a></li>
                 <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
             </ul>
             <div class="button-hero">
@@ -53,8 +53,36 @@
     
 
     <main>
-        <div class="main-hero">
-        </div>
+        <section class="about-container">
+            <div class="viewport">
+                <div class="video-parallax">
+                    <video autoplay loop muted src="assets/background-hightech.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+
+            <div class="about-content">
+                <picture class="about-picture">
+                    <img src="assets/batman-arkham-knight.jpeg" alt="picture profile">
+                </picture>
+                <div class="about-content-title">
+                    <span>discover</span>
+                    <h2>about me</h2>
+                    <hr>
+                    <p>My name is Daniel Augusto. I’m a Software Engineer Student, I’m very passionate and dedicated to my work. With 1 year experience as a professional Full Stack Developer, I have acquired the skills necessary to build great and premium websites.</p>
+                    <h2>Features</h2>
+                    <ul>
+                        <li>python</li>
+                        <li>python</li>
+                        <li>python</li>
+                        <li>python</li>
+                        <li>python</li>
+                        <li>python</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
         <section class="portfolio-container" id="portfolio-container">
             <header class="portfolio-header">
