--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <ul class="social-icons">
                 <li class="icon"><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
                 <li class="icon"><a href="https://github.com/danielssaugusto" target="_blank"><i class="devicon-github-original"></i></a></li>
-                <li class="icon"><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
+                <li class="icon"><a href="https://www.linkedin.com/in/danielsaugusto/" target="_blank"><i class="devicon-linkedin-plain"></i></a></li>
             </ul>
             <div class="button-hero">
-                <button type="button" class="button">know more</button>
+                <a href="#portfolio-container"><button type="button" class="button">know more</button></a>
             </div>
             <p class="quote">"Lembre-se de quando você sonhava <br>chegar aonde está hoje."</p>
         </div>
