--- a/index.html
+++ b/index.html
@@ -97,56 +97,22 @@
             </header>
 
             <section class="portfolio-container-main">
+
                 <div class="portfolio-card-container">
-                    <div class="portfolio-card">
-                        <header class="portfolio-card-header">
-                            <div class="portfolio-card-header-details">
-                                <span class="highlight yellow">em alta 🔥</span>
-                                <h3 class="portfolio-card-title">virtual assistant</h3>
-                            </div>
-                            <p class="portfolio-evaluation">Python</p>
-                        </header>
-                        <p class="portfolio-description">Programe o seu dia-a-dia.</p>
-                        <div class="portfolio-author">
-                            <img src="https://avatars.githubusercontent.com/u/165518765?v=4" alt="">
-                            <span class="portfolio-author-name">daniel augusto</span>
+                    <div class="card-container">
+                        <span>Calculator</span>
+                        <img src="assets/calculator-image.png" alt="calculator">
+                        <div class="portfolio-description">
+                            <p>
+                                Realize algumas operações básicas.
+                            </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="portfolio-card-container">
-                    <div class="portfolio-card">
-                        <header class="portfolio-card-header">
-                            <div class="portfolio-card-header-details">
-                                <span class="highlight yellow">em alta 🔥</span>
-                                <h3 class="portfolio-card-title">Calculator</h3>
-                            </div>
-                            <p class="portfolio-evaluation">Linguagem C</p>
-                        </header>
-                        <p class="portfolio-description">Operações básicas da matemática.</p>
-                        <div class="portfolio-author">
-                            <img src="https://avatars.githubusercontent.com/u/165518765?v=4" alt="">
-                            <span class="portfolio-author-name">daniel augusto</span>
-                        </div>
-                    </div>
-                </div>
+            </section>
 
-                <div class="portfolio-card-container">
-                    <div class="portfolio-card">
-                        <header class="portfolio-card-header">
-                            <div class="portfolio-card-header-details">
-                                <span class="highlight yellow">coming soon</span>
-                                <h3 class="portfolio-card-title">Em desenvolvimento</h3>
-                            </div>
-                            <p class="portfolio-evaluation">•</p>
-                        </header>
-                        <p class="portfolio-description"><br><br></p>
-                        <div class="portfolio-author">
-                            <!-- <img src="https://avatars.githubusercontent.com/u/165518765?v=4" alt=""> -->
-                            <span class="portfolio-author-name"></span>
-                        </div>
-                    </div>
-                </div>
+        </section>
 
         <section>
             <div class="video-container">
