adding responsive - html

--- a/index.html
+++ b/index.html
@@ -98,18 +98,30 @@
 
             <section class="portfolio-container-main">
 
-                <div class="portfolio-card-container">
+                <div class="card-container-main">
+                    
                     <div class="card-container">
-                        <span>Calculator</span>
                         <img src="assets/calculator-image.png" alt="calculator">
                         <div class="portfolio-description">
-                            <p>
-                                Realize algumas operações básicas.
-                            </p>
+                            <p>calculator</p>
+                        </div>
+                    </div>
+
+                    <div class="card-container">
+                        <img src="assets/calculator-image.png" alt="calculator">
+                        <div class="portfolio-description">
+                            <p>calculator</p>
+                        </div>
+                    </div>
+
+                    <div class="card-container">
+                        <img src="assets/calculator-image.png" alt="calculator">
+                        <div class="portfolio-description">
+                            <p>calculator</p>
                         </div>
                     </div>
                 </div>
-
+                
             </section>
 
         </section>
