--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <script src="main.js"></script>
     <link rel="shortcut icon" href="assets/logo-wolf.png" type="image/x-icon"> <!-- Favicon -->
-    <title>Groenendael</title>
+    <title>Daniel Augusto</title>
     <meta name="description" content="Descrição do site">
 </head>
 <body>
     <header>
         <nav>
-            <span class="logotype"><a href="index.html">groenendael</a></span>
+            <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
             <ul class="menu">
                 <li><a href="#about-container">About</a></li>
                 <li><a href="#">Contacts</a></li>
@@ -145,7 +145,7 @@
     </main>
 
     <footer>
-        <p class="footer-copyright">Groenendael ©️ 2024</p>
+        <p class="footer-copyright">Daniel Augusto ©️ 2024</p>
         <ul class="social-media">
             <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
         </ul>
