adding a line between sections

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
         </section> -->
 
         <section class="about-container" id="about-container">
+            <div class="section-line">
+                <hr class="line">
+            </div>
+            
             <div class="about-content">
                 <picture class="about-picture">
                     <img src="assets/batman-arkham-knight.jpeg" alt="picture profile">
@@ -89,7 +93,10 @@
                         <li class="icon">JavaScript</li>
                     </ul>
                 </div>
+            </div>
 
+            <div class="section-line">
+                <hr class="line">
             </div>
         </section>
 
