--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <!-- <p class="nav-subtitle">Estudante de Engenharia de Software transferido do <br>curso de Ciência da Computação, tem sido uma <br>jornada de ampliação de conhecimento.</p> -->
                 </div>
                 <picture class="nav-picture">
-                    <img src="assets/wolf-profile.jpg" alt="wolf photo">
+                    <img src="assets/Uncharted 4.jpeg" alt="Nathan Drake photo">
                 </picture>
             </div>
         </section>
@@ -73,10 +73,10 @@
             <div class="section-line">
                 <hr class="line">
             </div>
-            
+
             <div class="about-content">
                 <picture class="about-picture">
-                    <img src="assets/batman-arkham-knight.jpeg" alt="picture profile">
+                    <img src="assets/I found a Secret Land.jpeg" alt="picture profile">
                 </picture>
                 <div class="about-content-title">
                     <span>discover</span>
