change the resolutions

--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
                     <p class="nav-subtitle">As a Software Engineering student who transitioned from the Computer Science program, it has been an enriching journey of knowledge expansion</p>
                     <!-- <p class="nav-subtitle">Estudante de Engenharia de Software transferido do <br>curso de Ciência da Computação, tem sido uma <br>jornada de ampliação de conhecimento.</p> -->
                 </div>
-                <picture class="nav-picture">
-                    <img src="assets/Uncharted 4.jpeg" alt="Nathan Drake photo">
-                </picture>
+                <div class="picture-container">
+                    <picture class="nav-picture">
+                        <img src="assets/Uncharted 4.jpeg" alt="Nathan Drake photo">
+                    </picture>
+                </div>
             </div>
         </section>
     
