--- a/index.html
+++ b/index.html
@@ -86,14 +86,16 @@
                     <hr>
                     <p>My name is Daniel Augusto. I'm a Software Engineer Student, I'm very passionate and dedicated to my work. With 1 year experience as a professional Full Stack Developer, I have acquired the skills necessary to build great and premium websites.</p>
                     <h2>Features</h2>
-                    <ul class="features-icon">
-                        <li class="icon">python</li>
-                        <li class="icon">C/C++</li>
-                        <li class="icon">SQL</li>
-                        <li class="icon">HTML5</li>
-                        <li class="icon">CSS3</li>
-                        <li class="icon">JavaScript</li>
-                    </ul>
+                    <div class="about-icons">
+                        <ul class="features-icon">
+                            <li class="icon">python</li>
+                            <li class="icon">C/C++</li>
+                            <li class="icon">SQL</li>
+                            <li class="icon">HTML5</li>
+                            <li class="icon">CSS3</li>
+                            <li class="icon">JavaScript</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
 
