--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
                     <div class="button-hero">
                         <a href="#portfolio-container"><button type="button" class="button">know more</button></a>
                     </div>
-                    <p class="quote">"Lembre-se de quando você sonhava <br>chegar aonde está hoje."</p>
+<!--                     <p class="quote">"Lembre-se de quando você sonhava <br>chegar aonde está hoje."</p> -->
+                         <p class="quote">"Remember when you dreamed <br>of getting where you are today."</p>
                 </div>
             </div>
         </div>
@@ -106,8 +107,8 @@
 
         <section class="portfolio-container" id="portfolio-container">
             <header class="portfolio-header">
-                <span class="highlight blue">portifólio</span>
-                <h2 class="portfolio-title">Confira meus projetos disponiveis no GitHub</h2>
+                <span class="highlight blue">portfolio</span>
+                <h2 class="portfolio-title">Check out my projects on GitHub</h2>
             </header>
 
             <section class="portfolio-container-main">
