--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </section> -->
 
         <section class="about-container" id="about-container">
-            <div class="section-line">
+            <div class="section-line">''
                 <hr class="line">
             </div>
 
