--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
             <ul class="menu">
-                <li><a href="#about-container">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contacts</a></li>
                 <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
             </ul>
@@ -60,7 +60,7 @@
 
     <main>
         <section class="about-container" id="about-container">
-            <div class="section-line">''
+            <div class="section-line">
                 <hr class="line">
             </div>
 
