creating links in the file about.html

--- a/about.html
+++ b/about.html
@@ -3,12 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <title>About me</title>
 </head>
 <body>
+    <header>
+        <nav>
+            <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
+            <ul class="menu">
+                <li><a href="about.html">About</a></li>
+                <li><a href="#">Contacts</a></li>
+                <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
+            </ul>
+            <div class="button-container">
+                <button class="button-theme" id="theme-toggle">🌙</button>
+            </div>
+        </nav>
+    </header>
     <section>
         <h1>about</h1>
         <span>contact.danielssaugusto@gmail.com</span>
     </section>
+
+    <script src="main.js"></script>
 </body>
 </html>
