creation of the page structure

--- a/about.html
+++ b/about.html
@@ -21,10 +21,21 @@
             </div>
         </nav>
     </header>
-    <section>
-        <h1>about</h1>
-        <span>contact.danielssaugusto@gmail.com</span>
-    </section>
+
+    <main>
+        <section>
+            <h1>about</h1>
+            <span>contact.danielssaugusto@gmail.com</span>
+        </section>
+        <picture>
+            <img src="#" alt="picture profile">
+        </picture>
+    </main>
+
+    <footer>
+        <h2>Brazil</h2>
+        <span>-- daniel augusto --</span>
+    </footer>
 
     <script src="main.js"></script>
 </body>
