updated about container

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <title>About me</title>
 </head>
 <body>
-    <header>
+    <header class="nav-conteiner nav-about">
         <nav>
             <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
             <ul class="menu">
