--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="description" content="Descrição do site">
 </head>
 <body>
-    <header>
+    <header class="nav-container nav-index">
         <nav>
             <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
             <ul class="menu">
