Creating and adding images for the toggle button

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
             </ul>
             <div class="button-container">
-                <button class="button-theme" id="theme-toggle">🌙</button>
+                <button class="button-theme" id="theme-toggle"></button>
             </div>
         </nav>
         <section class="header-main">
