--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
                     <h2>about me</h2>
                     <hr>
                     <p>My name is Daniel Augusto. I'm a Software Engineer Student, I'm very passionate and dedicated to my work. With 1 year experience as a professional Full Stack Developer, I have acquired the skills necessary to build great and premium websites.</p>
+                    <p>Follow my projects through this website and see the tools with which I am familiar. I look forward to the opportunity to start my career and join a team of developers where I can contribute and learn new skills.</p>
                     <h2>Features</h2>
                     <div class="about-icons">
                         <ul class="features-icon">
