--- a/index.html
+++ b/index.html
@@ -82,7 +82,11 @@
                             <li class="icon">SQL</li>
                             <li class="icon">HTML5</li>
                             <li class="icon">CSS3</li>
-                            <li class="icon">JavaScript</li>
+                            <li class="icon">git</li>
+                            <li class="icon">GitHub</li>
+                            <li class="icon">MySQL</li>
+                            <li class="icon">figma</li>
+                            <li class="icon">VS Code</li>
                         </ul>
                     </div>
                 </div>
