--- a/index.html
+++ b/index.html
@@ -13,32 +13,34 @@
 <body>
     <header class="nav-container nav-index">
         <nav>
-            <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
-            <ul class="menu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="#">Contacts</a></li>
-                <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
-            </ul>
-            <div class="button-container">
-                <button class="button-theme" id="theme-toggle"></button>
+            <div class="nav-menu">
+                <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
+                <ul class="menu">
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="#">Contacts</a></li>
+                    <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
+                </ul>
+                <div class="button-container">
+                    <button class="button-theme" id="theme-toggle"></button>
+                </div>
             </div>
+            <section class="header-main">
+                <div class="nav-profile">
+                    <div class="nav-profile-left">
+                        <h1>hi! i'm</h1>
+                        <span class="nav-profile-subtitle">software engineer</span>
+                        <hr>
+                        <p class="nav-subtitle">As a Software Engineering student who transitioned from the Computer Science program, it has been an enriching journey of knowledge expansion</p>
+                    </div>
+                    <div class="picture-container">
+                        <picture class="nav-picture">
+                            <img src="assets/Uncharted 4.jpeg" alt="Nathan Drake photo">
+                        </picture>
+                    </div>
+                </div>
+            </section>
         </nav>
-        <section class="header-main">
-            <div class="nav-profile">
-                <div class="nav-profile-left">
-                    <h1>hi! i'm</h1>
-                    <span class="nav-profile-subtitle">software engineer</span>
-                    <hr>
-                    <p class="nav-subtitle">As a Software Engineering student who transitioned from the Computer Science program, it has been an enriching journey of knowledge expansion</p>
-                </div>
-                <div class="picture-container">
-                    <picture class="nav-picture">
-                        <img src="assets/Uncharted 4.jpeg" alt="Nathan Drake photo">
-                    </picture>
-                </div>
-            </div>
-        </section>
-    
+        
         <div class="hero-container">
             <div class="social-container">
                 <ul class="social-icons">
