creating files with new themes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="light.css">
+    <link rel="stylesheet" type="text/css" href="dark.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="shortcut icon" href="assets/logo-wolf.png" type="image/x-icon"> <!-- Favicon -->
     <title>Daniel Augusto</title>
@@ -21,7 +23,9 @@
                     <li><a target="_blank" id="github" href="https://github.com/danielssaugusto">GitHub</a></li>
                 </ul>
                 <div class="button-container">
-                    <button class="button-theme" id="theme-toggle"></button>
+                    <button class="button-theme" id="theme-toggle">
+                        <img src="assets/moon.png" alt="Tema escuro">
+                    </button>
                 </div>
             </div>
             <section class="header-main">
