--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="stylesheet" type="text/css" href="light.css">
-    <link rel="stylesheet" type="text/css" href="dark.css">
+    <link id="theme-stylesheet" rel="stylesheet" type="text/css" href="light.css">
     <link rel="stylesheet" type='text/css' href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css" />
     <link rel="shortcut icon" href="assets/logo-wolf.png" type="image/x-icon"> <!-- Favicon -->
     <title>Daniel Augusto</title>
