adding css: creating header style

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta name="description" content="My personal page with my main projects.">
 </head>
 <body>
-    <header class="container">
+    <header class="container-header">
         <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
 
         <nav class="nav-container">
-            <ul>
-                <li>about</li>
-                <li>contacts</li>
+            <ul class="nav-bar">
+                <li><a href="">about</a></li>
+                <li><a href="">contacts</a></li>
                 <li><a target="_blank" id="github" href="https://github.com/danielssaugusto" title="GitHub">GitHub</a></li>
             </ul>
         </nav>
