--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="My personal page with my main projects.">
 </head>
 <body>
-    <header class="container-header">
+    <header id="container-header" class="container-header">
         <span class="logotype"><a href="index.html">Daniel Augusto</a></span>
 
         <nav class="nav-container">
@@ -86,5 +86,7 @@
             <li><a href="https://www.linkedin.com/in/danielsaugusto/" target="_blank"><i class="devicon-linkedin-plain"></i></a></li>
         </ul>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
