new website official

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </ul>
         </nav>
 
-        <button type="button" class="theme-switcher" id="theme switcher">
+        <button type="button" class="theme-switcher" id="theme-switcher">
             <img src="assets/moon.png" alt="Dark mode" title="Dark Mode">
         </button>
     </header>
 
-    <main class="container">
+    <main class="container-main">
         <section class="cover-letter">
             <main class="cover-letter-summary">
-                <div>
+                <div class="summary">
                     <p class="greet">hi! i'm</p>
                     <h1 class="job-title">software engineer</h1>
                     <hr class="horizontal-row">
@@ -62,6 +62,7 @@
 
         <section class="portfolio-presentation">
             <header class="portfolio-presentation-header">
+                <hr class="horizontal-row">
                 <h2 class="portfolio-presentation-title">portfolio</h2>
                 <p class="portfolio-presentation-subtitle">Check out my main projects on GitHub</p>
             </header>
@@ -70,15 +71,12 @@
                 <div class="projects-container-card">
                     <img src="assets/voice-assistant-image.png" alt="physical representation of the virtual assistant">
                     <h2 class="project-highlight">voice assistant</h2>
-                    <p class="project-summary">
-                        My personal assistant...
-                    </p>
                 </div>
             </main>
         </section>
     </main>
     
-    <footer class="container">
+    <footer class="container-footer">
         <p class="copyright">Daniel Augusto ©️ 2024</p>
         <ul class="social-media-icons">
             <li><a href="https://twitter.com/" target="_blank"><i class="devicon-twitter-original"></i></a></li>
